--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,7 @@
   {% block teaser %}
   {% endblock teaser %}
   {% include "snippets/footer.html" %}
+  {% include "snippets/analytics.html" %}
 </body>
 
 </html>
