--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -28,7 +28,7 @@
                 </p>
             </form>
             <p>
-                I also <a href="https://twitter.com/matthiasendler">tweet</a> new articles and have an <a href="https://feedly.com/i/subscription/feed/https://matthias-endler.de/rss.xml">RSS
+                I also <a href="https://twitter.com/matthiasendler">tweet</a> about new articles and have an <a href="https://feedly.com/i/subscription/feed/https://matthias-endler.de/rss.xml">RSS
                     feed</a>.
             </p>
         </div>
