Winter is over!

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <body>
   <div class="container">
     <header>
-      {% include "snippets/logo-winter.html" %}
+      {% include "snippets/logo.html" %}
       <div class="bio">
         <p>
           Backend Engineer at trivago.
