--- a/templates/snippets/analytics.html
+++ b/templates/snippets/analytics.html
@@ -4,7 +4,7 @@
             (ga.q = ga.q || []).push(arguments)
         };
         ga.l = +new Date;
-        ga('create', 'UA-693428-1', 'auto');
+        ga('create', '{{ config.extra.id }}', 'auto');
         ga('send', 'pageview');
     }
 </script>
