New footer with about section

--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,35 +1,31 @@
 <footer>
     <div class="body">
-        <nav>
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/about">About</a>
-                </li>
-                <li>
-                    <a href="/talks">Talks</a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/matthiasendler/">Twitter</a>
-                </li>
-                <li>
-                    <a href="https://github.com/mre/">Github</a>
-                </li>
-            </ul>
-        </nav>
         <div>
-            <form action="https://tinyletter.com/mre" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true">
-                <p><label for="tlemail">Subscribe to my monthly newsletter here:</label></p>
+            <h2><a href="/about">About me</a></h2>
+            <p>
+                I'm a Backend Engineer running <i><a href="http://hello-rust.show/">Hello, Rust!</a></i>, a YouTube
+                channel about the Rust
+                programming language.
+                On this blog, you'll mostly find articles about programming in
+                <a href="/2017/yes/"">Rust</a> and <a href="/2018/go-io-testing/">Go </a> or developer tools like <a
+                    href="/2017/makefiles/">make</a> and <a href="/2018/ten-years-of-Vim/">Vim</a>. We should hang out
+                some
+                time.
+                It'll be great.<br />
+            </p>
+        </div>
+        <div>
+            <form action="https://tinyletter.com/mre" method="post" target="popupwindow"
+                onsubmit="window.open('https://tinyletter.com/mre', 'popupwindow', 'scrollbars=yes,width=800,height=600'); return true">
+                <p><label for="tlemail">Wow! I have a newsletter for new articles:</label></p>
                 <p>
                     <input class="field email" type="email" name="email" id="tlemail" placeholder="E-Mail Address" />
-                    <input type="hidden" value="1" name="embed" /><input class="field submit" type="submit" value="Subscribe" />
+                    <input type="hidden" value="1" name="embed" /><input class="field submit" type="submit"
+                        value="Subscribe" />
                 </p>
             </form>
             <p>
-                I also <a href="https://twitter.com/matthiasendler">tweet</a> about new articles and have an <a href="https://feedly.com/i/subscription/feed/https://matthias-endler.de/rss.xml">RSS
-                    feed</a>.
+                <a href="https://twitter.com/matthiasendler">Twitter</a> is also fine.
             </p>
         </div>
     </div>
