Add proper page titles

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,13 @@
 
 <head>
   <link rel="stylesheet" href="{{ get_url(path="main.css") }}" />
-  {% block header %}
-  {% endblock header %}
-  {% include "snippets/manifest.html" %}
-  {% if config.extra.id %}
+  {%- block header %}
+  <title>Matthias Endler</title>
+  {%- endblock header %}
+  {%- include "snippets/manifest.html" %}
+  {%- if config.extra.id %}
   <link rel="dns-prefetch" href="//www.google-analytics.com/" />
-  {% endif %}
+  {%- endif %}
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=m2llJQPQq8">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=m2llJQPQq8">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=m2llJQPQq8">
@@ -22,7 +23,6 @@
   <meta name="author" content="Matthias Endler">
   <meta name="description"
     content="Personal website of Matthias Endler, a Software Engineer interested in low-level programming and Backend development. Rust, Go" />
-  <title>Matthias Endler</title>
 </head>
 
 <body>
