--- a/templates/static.html
+++ b/templates/static.html
@@ -1,5 +1,9 @@
 {% extends "index.html" %}
 
+{% block header %}
+<title>{{ page.title }} | Matthias Endler</title>
+{% endblock header %}
+
 {% block content %}
 <article>
     <h1>{{ page.title }}</h1>
