Fix path to search_min

--- a/templates/snippets/search.html
+++ b/templates/snippets/search.html
@@ -1,4 +1,4 @@
-<script src="search_min.js" type="module"></script>
+<script src="/search_min.js" type="module"></script>
 <form autocomplete="off">
     <div class="autocomplete">
         <input id="tinysearch" type="text" placeholder="&#x1F50D; Search for...">
