--- a/templates/json.html
+++ b/templates/json.html
@@ -2,10 +2,12 @@
 
 [
 {%- for post in section.pages -%}
+{% if not post.draft %}
 {
 "title": {{ post.title | safe | striptags | json_encode }},
 "url": {{ post.permalink | safe | json_encode }},
 "body": {{ post.content | safe | striptags | json_encode }}
 }{% if not loop.last %},{% endif %}
+{% endif %}
 {%- endfor -%}
 ]
