--- a/templates/snippets/search.html
+++ b/templates/snippets/search.html
@@ -1,6 +1,6 @@
 <script src="/search_min.js" type="module"></script>
 <form autocomplete="off">
     <div class="autocomplete">
-        <input id="tinysearch" type="text" placeholder="&#x1F50D; Search for...">
+        <input id="tinysearch" type="text" placeholder="&#x1F50D; Search">
     </div>
 </form>
