--- a/templates/index.html
+++ b/templates/index.html
@@ -81,9 +81,8 @@
   {% include "snippets/footer.html" %}
   {% if config.extra.id %}
   {% include "snippets/analytics.html" %}
-  {% else %}
-  <img src="https://ping.matthias-endler.de/t.gif?url={{ current_path }}" />
   {% endif %}
+  <img src="https://ping.matthias-endler.de/lol.gif?url={{ current_path }}" />
 </body>
 
 </html>
