Change path to ping

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
   {% if config.extra.id %}
   {% include "snippets/analytics.html" %}
   {% endif %}
-  <img src="https://ping.matthias-endler.de/lol.gif?url={{ current_path }}" />
+  <img src="https://matthias-endler.de/lol.gif?url={{ current_path }}" />
 </body>
 
 </html>
