--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -7,7 +7,7 @@
                 channel about the Rust
                 programming language.
                 On this blog, you'll mostly find articles about programming in
-                <a href="/2017/yes/"">Rust</a> and <a href="/2018/go-io-testing/">Go </a> or developer tools like <a
+                <a href="/2017/yes/">Rust</a> and <a href="/2018/go-io-testing/">Go </a> or developer tools like <a
                     href="/2017/makefiles/">make</a> and <a href="/2018/ten-years-of-vim/">Vim</a>. We should hang out
                 some
                 time.
