--- a/templates/snippets/analytics.html
+++ b/templates/snippets/analytics.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
     if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
         window.ga = window.ga || function () {
             (ga.q = ga.q || []).push(arguments)
