--- a/templates/shortcodes/figure.html
+++ b/templates/shortcodes/figure.html
@@ -1,19 +1,19 @@
 {% if link %}
 <a href="{{ link }}">
-{% endif %}
-<figure>
-    <img src="{{ src }}" />
-    {% if caption or credits %}
-    <figcaption>
-        {% if caption %}
-        {{ caption }}
-        {% endif %}
-        {% if credits %}<br />
-        {{ credits | markdown(inline=true) }}
-        {% endif %}
-    </figcaption>
     {% endif %}
-</figure>
-{% if link %}
+    <figure>
+        <img src="{{ src }}" {% if alt %} alt="{{ alt }}" {% endif %} />
+        {% if caption or credits %}
+        <figcaption>
+            {% if caption %}
+            {{ caption }}
+            {% endif %}
+            {% if credits %}<br />
+            {{ credits | markdown(inline=true) }}
+            {% endif %}
+        </figcaption>
+        {% endif %}
+    </figure>
+    {% if link %}
 </a>
 {% endif %}
