Avoid redirect for tracking pixel

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
       {% endif %}
       {% endblock content %}
     </main>
-    <img alt="Page view statistics" src="https://matthias-endler.de/x.gif" />
+    <img alt="Page view statistics" src="https://ping.matthias-endler.de/x.gif" />
   </div>
   {% block teaser %}
   {% endblock teaser %}
