matthias-endler.de is now endler.dev

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
               title="My Twitter profile">Twitter</a>
           </li>
           <li>
-            <a class="icon rss-icon" href="https://feedly.com/i/subscription/feed/https://matthias-endler.de/rss.xml"
+            <a class="icon rss-icon" href="https://feedly.com/i/subscription/feed/https://endler.dev/rss.xml"
               title="My RSS feed">RSS</a>
           </li>
         </ul>
@@ -78,7 +78,7 @@
       {% endif %}
       {% endblock content %}
     </main>
-    <img alt="Page view statistics" src="https://ping.matthias-endler.de/x.gif" />
+    <img alt="Page view statistics" src="https://ping.endler.dev/x.gif" />
   </div>
   {% block teaser %}
   {% endblock teaser %}
