--- a/templates/snippets/social.html
+++ b/templates/snippets/social.html
@@ -16,8 +16,8 @@
 <meta property="og:title" content="{{ page.title }} | Matthias Endler" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="{{ social_description | striptags | safe }}" />
-<meta property="og:url" content="https://matthias-endler.de/{{ page.path | safe }}" />
-<meta property="og:image" content="https://matthias-endler.de/img/social/{{ social_img | safe }}" />
+<meta property="og:url" content="https://endler.dev/{{ page.path | safe }}" />
+<meta property="og:image" content="https://endler.dev/img/social/{{ social_img | safe }}" />
 
 <meta name="twitter:title" content="{{ page.title | safe }}">
 <meta name="twitter:description" content="{{ social_description | striptags | safe }}">
