Update bio text

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
     <header>
       {% include "snippets/logo.html" %}
       <p class="bio">
-        Backend Engineer at trivago.
-        Likes just-in-time compilers and hot chocolate.
+        Backend engineer at trivago, open-source maintainer, speaker.
+        Writes about Rust, low-level computing, and microwave clocks.
         <a href="/about">About me.</a>
       </p>
       <nav>
