--- a/templates/snippets/social.html
+++ b/templates/snippets/social.html
@@ -10,14 +10,14 @@
 {% set relpath = current_path ~ page.extra.social_img %}
 {%- set social_img = get_url(path=relpath) %}
 {% else %}
-{%- set social_img = "/default.png" %}
+{%- set social_img = "https://endler.dev/default.png" %}
 {%- endif %}
 
 <meta property="og:title" content="{{ page.title }} | Matthias Endler" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content="{{ social_description | striptags | safe }}" />
 <meta property="og:url" content="https://endler.dev/{{ page.path | safe }}" />
-<meta property="og:image" content="https://endler.dev/img/social/{{ social_img | safe }}" />
+<meta property="og:image" content="{{ social_img | safe }}" />
 
 <meta name="twitter:title" content="{{ page.title | safe }}">
 <meta name="twitter:description" content="{{ social_description | striptags | safe }}">
